--- a/public/views/client.html
+++ b/public/views/client.html
@@ -878,7 +878,8 @@
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
         <!-- <script defer src="https://cdn.jsdelivr.net/npm/crypto-js@4.2.0/index.min.js"></script> -->
         <script defer src="https://unpkg.com/@popperjs/core@2"></script>
-        <script defer src="https://unpkg.com/tippy.js@6"></script>
+        <script src=" https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/dist/tippy.umd.min.js "></script>
+        <link href=" https://cdn.jsdelivr.net/npm/tippy.js@6.3.7/themes/light.min.css " rel="stylesheet">
         <script defer src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
         <script defer src="/socket.io/socket.io.js"></script>
         <script defer src="../js/localStorage.js"></script>
